--- a/public/style/media.css
+++ b/public/style/media.css
@@ -140,9 +140,9 @@
         padding: 7% 0;
     }
     .company__name {
-        line-height: 2.2em;
+        line-height: 1.5em;
 
-        font-size: 100px;
+        font-size: 80px;
     }
 
     /**Common*/
@@ -257,13 +257,17 @@
     .ticket__container {
         border: none;
     }
+    .hero .page__name {
+        padding-top: 25%;
+    }
+    .company__name {
+        line-height: 2em;
+        margin-top: 2.5em;
+        font-size: 50px;
+    }
 }
 @media screen and (max-width:400px) {
-    .company__name {
-        line-height: 3.2em;
-        margin-top: 1em;
-        font-size: 70px;
-    }
+
     .footer__subscribe form {
         margin-left: 0;
         flex-wrap: wrap;
