--- a/template/createHotel.ejs
+++ b/template/createHotel.ejs
@@ -32,7 +32,7 @@
     </label>
     <label for="hotelStar">
         hotel Star
-        <input type="number" max="5" min="1">
+        <input type="number" name="hotelStar" id="hotelStar" max="5" min="1">
     </label>
     <textarea name="hotelDescription" id="hotelDescription" cols="30" rows="10">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores
