--- a/template/modal_window/callback_modal.ejs
+++ b/template/modal_window/callback_modal.ejs
@@ -1,5 +1,6 @@
 <!--MODAL CALLBACK WINDOW BEGIN-->
 <div class="modal container-fluid " id="modalCallback-w">
+    <div class="overlay"></div>
     <div class="modal__container container">
         <div class="modal__title">
             <b>
