--- a/template/modal_window/search_modal.ejs
+++ b/template/modal_window/search_modal.ejs
@@ -1,5 +1,6 @@
 <!--MODAL SEARCH WINDOW BEGIN-->
 <div class="modal container-fluid " id="modalSearch-w">
+    <div class="overlay"></div>
     <div class="modal__container container">
         <div class="modal__title">
             <b>
