create contact page

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include section/header %>
 <section class="container-fluid video">
     <div class="video__container">
         <video autoplay loop muted poster="../img/poster.jpg">
@@ -101,4 +101,4 @@
         </div>
     </div>
 </section>
-<% include footer %>
+<% include section/footer %>
