--- a/template/section/header.ejs
+++ b/template/section/header.ejs
@@ -51,7 +51,7 @@
                     <!--<li class="sub-menu__item"><a href="#">Все услуги</a></li>-->
                 <!--</ul>-->
             <!--</li>-->
-            <li><a href="#">Контакты</a></li>
+            <li><a href="/contacts">Контакты</a></li>
             <li><button class="sub-menu__btn" id="modalSearch-b">Мой билет</button></li>
             <li class="callback">
                 <button class="callback__btn" id="modalCallback-b"
@@ -60,5 +60,5 @@
         </ul>
     </nav>
 </header>
-<% include modal_window/callback_modal %>
-<% include modal_window/search_modal %>
+<% include ../modal_window/callback_modal %>
+<% include ../modal_window/search_modal %>
