--- a/template/single.ejs
+++ b/template/single.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include section/header %>
 <main>
     <section class="container-fluid hero">
         <h1 class="company__name page__name"><%= tour.tourName %></h1>
@@ -223,4 +223,4 @@
 <script src="../js/jquery-ui.js"></script>
 <script src="../js/datepicker.js"></script>
 <script src="../js/booking.js"></script>
-<% include footer %>
+<% include section/footer %>
