--- a/template/toursHot.ejs
+++ b/template/toursHot.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include section/header %>
 <section class="container-fluid hero">
     <h1 class="company__name page__name">All Tours</h1>
 </section>
@@ -55,4 +55,4 @@
     </div>
 </section>
 <script src="../js/tours.js"></script>
-<% include footer %>
+<% include section/footer %>
