--- a/public/style/general.css
+++ b/public/style/general.css
@@ -6,6 +6,10 @@ html {
 	padding: 0;
 	margin: 0;
 }
+main {
+	/*300px footer height  */
+	min-height: calc(100vh - 300px);
+}
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
