--- a/template/contacts.ejs
+++ b/template/contacts.ejs
@@ -32,8 +32,9 @@
                 <div class="contacts__content">
                     <ul class="contacts__list">
                         <li class="contacts__list-item">
-                            улица Соборная, Винница, <br>
-                            Винницкая область, 21000
+                            <a href="#map">
+                                улица Соборная, Винница
+                            </a>
                         </li>
                         <li class="contacts__list-item icon-map">
                             <a href="tel:+380961745762">+380961745762</a>
